force-app/main/default/objects/Vendor_Customization__c/Vendor_Customization__c.object-meta.xml
<CustomObject>
    <description>Versioned vendor program configuration chosen during onboarding (child versions inherit from parent versions; drives requirement sets, status rules, and wizard selection).</description>
    <label>Vendor Program</label>
    <pluralLabel>Vendor Programs</pluralLabel>
    <nameField>
        <label>Vendor Program Name</label>
        <type>Text</type>
    </nameField>
    <!-- Master-detail to Vendor; sharing inherited from parent -->
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>