force-app/main/default/objects/Vendor_Customization__c/fields/Action_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Plan Template</label>
    <referenceTo>ActionPlanTemplate</referenceTo>
    <relationshipName>Vendor_Customizations</relationshipName>
    <type>Lookup</type>
</CustomField>