force-app/main/default/objects/Vendor_Customization__c/fields/Associated_Agreement_Template__c.field-meta.xml
<CustomField>
    <fullName>Associated_Agreement_Template__c</fullName>
    <description>Agreement template tied to this vendor program customization.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Agreement Template</label>
    <referenceTo>echosign_dev1__Agreement_Template__c</referenceTo>
    <relationshipName>Vendor_Customizations</relationshipName>
    <type>Lookup</type>
</CustomField>