force-app/main/default/objects/Vendor_Customization__c/fields/Certificate_Holder_Needed__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Holder_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Holder Needed</label>
    <type>Checkbox</type>
</CustomField>