force-app/main/default/objects/Vendor_Customization__c/fields/Clone_From_Vendor_Program__c.field-meta.xml
<CustomField>
    <fullName>Clone_From_Vendor_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clone From Vendor Program</label>
    <referenceTo>Vendor_Customization__c</referenceTo>
    <relationshipLabel>Vendor Programs (Clone From Vendor Program)</relationshipLabel>
    <relationshipName>Cloned_From_Vendor_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>