force-app/main/default/objects/Vendor_Customization__c/fields/Contract_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Record_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Record Type</label>
    <referenceTo>Contract_Record_Type_Reference__c</referenceTo>
    <relationshipName>Vendor_Customizations</relationshipName>
    <type>Lookup</type>
</CustomField>