force-app/main/default/objects/Vendor_Customization__c/fields/General_Liability_Insurance_Needed__c.field-meta.xml
<CustomField>
    <fullName>General_Liability_Insurance_Needed__c</fullName>
    <description>Indicates general liability insurance is required for this program.</description>
    <defaultValue>false</defaultValue>
    <label>General Liability Insurance Needed</label>
    <type>Checkbox</type>
</CustomField>