force-app/main/default/objects/Vendor_Customization__c/fields/Previous_Version__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Version</label>
    <referenceTo>Vendor_Customization__c</referenceTo>
    <relationshipLabel>Vendor Programs</relationshipLabel>
    <relationshipName>Previous_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>