force-app/main/default/objects/Vendor_Customization__c/fields/Vendor_Program_Requirement_Group__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Requirement_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Program Requirement Group</label>
    <referenceTo>Vendor_Program_Requirement_Group__c</referenceTo>
    <relationshipLabel>Vendor Programs</relationshipLabel>
    <relationshipName>Vendor_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>