force-app/main/default/objects/Vendor_Customization__c/fields/Works_Comp_Insurance_Needed__c.field-meta.xml
<CustomField>
    <fullName>Works_Comp_Insurance_Needed__c</fullName>
    <description>Indicates workers’ compensation coverage is required for this program.</description>
    <defaultValue>false</defaultValue>
    <label>Work&apos;s Comp Insurance Needed</label>
    <type>Checkbox</type>
</CustomField>